Contest e Multimedia Content
Aggiunta di classi Dto;
Lavoro e modifiche su Service e Repository di Contest e Multimedia Content.
Aggiunta della classe MediaFile.